Add mailto link and menus

--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
 				<header id="header">
 					<h1 id="logo"><a href="index.html">Landed</a></h1>
 					<nav id="nav">
-						<!-- <ul>
-							<li><a href="index.html">Home</a></li>
+						<ul>
+							<!-- <li><a href="index.html">Home</a></li> -->
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Menu</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li> -->
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Projects</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="#dissonance">Dissonance</a></li>
+											<li><a href="#puyo-drop">Puyo Drop</a></li>
 										</ul>
 									</li>
+									<li><a href="#skills">Skills</a></li>
+									<li><a href="#footer">Contact Me</a></li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul> -->
+							<!-- <li><a href="elements.html">Elements</a></li> -->
+							<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
+						</ul>
 					</nav>
 				</header>
 
@@ -232,7 +232,7 @@
 						<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/eric-chiu-920/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a target="_blank" rel="noopener noreferrer" href="https://angel.co/eric-chiu-6" class="icon brands alt fa-angellist"><span class="label">AngelList</span></a></li>
 						<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/EricChiu920" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a target="_blank" rel="noopener noreferrer" href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a target="_blank" rel="noopener noreferrer" href="mailto:EricChiu920@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
