removed filler text and add link to resume to navbar

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 										</ul>
 									</li>
 									<li><a href="#skills">Skills</a></li>
+									<li><a target="_blank" rel="noopener noreferrer" href="images/Resume - Eric Chiu.pdf">Link to Resume</a></li>
 									<li><a href="#footer">Contact Me</a></li>
 								</ul>
 							</li>
@@ -191,7 +192,7 @@
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major"><i class="devicon-css3-plain-wordmark colored dev-icons"></i></span>
-									<h3>Massa arcu accumsan</h3>
+									<h3>CSS3</h3>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major"><i class="devicon-git-plain colored dev-icons"></i></span>
@@ -208,7 +209,7 @@
 				</section>
 
 			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
+				<!-- <section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
 							<h2>Magna faucibus lorem diam</h2>
@@ -221,7 +222,7 @@
 							</div>
 						</form>
 					</div>
-				</section>
+				</section> -->
 
 			<!-- Footer -->
 				<footer id="footer">
